// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`waitForStable > should allow to set custom error 1`] = `
[
  [
    [Function],
    {
      "interval": 5,
      "timeout": 1000,
      "timeoutMsg": "my custom error",
    },
  ],
]
`;

exports[`waitForStable > should use default waitFor options 1`] = `
[
  [
    [Function],
    {
      "interval": 5,
      "timeout": 1000,
      "timeoutMsg": "element (\\"#foo\\") still not stable after 1000ms",
    },
  ],
]
`;
